[gd_scene load_steps=5 format=3 uid="uid://bocbiqbkandeu"]

[ext_resource type="PackedScene" uid="uid://bqlpqre5x1pvw" path="res://scenes/world.tscn" id="1_6cjy5"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_6fmyw"]
[ext_resource type="PackedScene" uid="uid://xi3lpw1qpqc6" path="res://scenes/assets/FPSLabel.tscn" id="3_jb3qv"]
[ext_resource type="PackedScene" uid="uid://bsb48pfvokwyk" path="res://scenes/assets/moon.tscn" id="3_oqsob"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_6fmyw")

[node name="Background" type="Node3D" parent="."]

[node name="world" parent="Background" instance=ExtResource("1_6cjy5")]

[node name="moon" parent="Background" instance=ExtResource("3_oqsob")]
transform = Transform3D(0.598281, 0.624941, -0.501507, 0.206707, 0.484322, 0.850121, 0.774165, -0.612276, 0.160581, 11.7794, 8.56883, -9.74826)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7322, 2.37452, 6.7575)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "Dark"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="Join" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Join"
flat = true

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Quit"
flat = true

[node name="FPSLabel" parent="." instance=ExtResource("3_jb3qv")]

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
